Fixed overflow.

--- a/src/app/authors/components/style.css
+++ b/src/app/authors/components/style.css
@@ -10,6 +10,7 @@
 
   a {
     display: flex;
+    flex-wrap: wrap;
     gap: 1em;
     padding: 1em;
     border-radius: 1em;
@@ -27,6 +28,8 @@
     display: flex;
     align-items: center;
     align-self: flex-end;
+    flex-wrap: wrap;
+    word-break: break-all;
 
     span {
       font-style: normal;
